2011-11-18  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/: Remove duplicate parameter checks.  Write
	common functions for variety of code.
	
2011-11-18  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Add support for IPMI firmware firewall and command
	discovery payloads.  Perform some code cleanup.
	
2011-11-16  Albert Chu <chu11@llnl.gov>

	* Continued code cleanup.  Remove unnecessary null checks.
	Remove excessive/unnecessary initializations.  Fix minor bugs.
	Fix code inconsistency styles.  Remove unused functions.

	* Update additional documentation about new ipmi-pet tool.
	
2011-11-15  Albert Chu <chu11@llnl.gov>

	* Code cleanup and minor fixes.  Remmove unnecessary if checks for
	free() globally.  Remove excessive initializations.  Fix minor
	bugs.
	
2011-11-15  Albert Chu <chu11@llnl.gov>

	* Support IPMI_FLAGS_NOSESSION in libfreeipmi.

	* libfreeipmi/include/freeipmi/record-format/ipmi-platform-event-trap-record-format.h:
	Support macros for sequence number.

	* Support --pet-acknowledge in ipmi-pet.
	
2011-11-15  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/ipmi-pet.8.pre.in: Add examples.

2011-11-15  Kaiwang Chen <kaiwang.chen@gmail.com>

	* contrib/pet/petalert.pl: Support various new features.
	
2011-11-14  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/api/ipmi-api.h: Update documentation.

	* libfreeipmi/src/api/ipmi-lan-session-common.c: Code cleanup.
	
2011-11-14  Kaiwang Chen <kaiwang.chen@gmail.com>

	* Add contrib/pet/petalert.pl script from Kaiwang
	Chen (kaiwang.chen AT gmail DOT com).
	
2011-11-14  Albert Chu <chu11@llnl.gov>

	* Support Supermicro X9SCM-F IANA change.
	
2011-11-08  Albert Chu <chu11@llnl.gov>

	* Support Supermicro X9SCA-F-O OEM sensors.

2011-11-08  Albert Chu <chu11@llnl.gov>

	Merge branch ipmipet.

	* ipmi-pet/: New tool.

	* libfreeipmi/include/freeipmi/record-format/ipmi-platform-event-trap-record-format.h:
	New file.
